infra/k8s/base/varnish/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: varnish
  annotations:
    ignore-check.kube-linter.io/latest-tag: "Ignored here as Kustomize sets the image tag dynamically during deployment"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: varnish
  template:
    metadata:
      labels:
        app: varnish
    spec:
      securityContext:
        runAsUser: 1000
      containers:
        - name: varnish
          image: edge-cache-lab-varnish:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "400m"
              memory: "512Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
          securityContext: 
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: varnish-workspace
              mountPath: /var/lib/varnish
      volumes:
        - name: varnish-workspace
          emptyDir: {}
