infra/k8s/base/varnish/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: varnish
spec:
  type: ClusterIP
  selector:
    app: varnish
  ports:
    - name: http
      port: 80
      targetPort: 80
